--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@
 
 
 h1 {
+    font-size: 33px;
     text-align: center;
     background: rgb(169, 240, 203);
     
 }
 
 p {
+
     text-align: center;
   
 }
