--- a/style.css
+++ b/style.css
@@ -17,4 +17,9 @@ p {
     text-align: center;
   
 }
-    
+    ul {
+        display: inline-block;
+    }
+    #celular1 {
+         width: 50%;
+    }
