--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ p {
     
         display: inline-block;
         vertical-align: top;
+        margin-right: 15%;
+        width: 40%;
     }
 
     #celular1 {
