--- a/produtos.css
+++ b/produtos.css
@@ -2,7 +2,22 @@ header{
     background-color: rgb(33, 107, 107);
 }
 
+h1 {
+    display: inline;
+
+}
+
+#logo {
+     width: 250px
+}
+  nav {
+    display:inline-block
+  }
+
+
  nav li {
+
     display: inline;
     margin: 10px;
+
  }
