--- a/produtos.css
+++ b/produtos.css
@@ -25,4 +25,7 @@ h1 {
  nav a {
     text-transform: uppercase;
     color: rgb(33, 22, 70);
+    font-weight: bold;
+    font-size: 20px;
+    text-decoration: none;
  }
