--- a/produtos.css
+++ b/produtos.css
@@ -11,7 +11,10 @@ h1 {
      width: 250px
 }
   nav {
-    display:inline-block
+    display:inline-block;
+    position:absolute;
+    right: 30px;
+    top: 110px;
   }
 
 
