--- a/produtos.css
+++ b/produtos.css
@@ -44,3 +44,12 @@ h1 {
         width: 1200px;
         margin: 0 auto;
  }
+
+ .produtos li {
+   display: inline-block;
+ }
+
+  .item {
+    width: 350px;
+    height: 260px;
+  }
