--- a/produtos.css
+++ b/produtos.css
@@ -49,6 +49,9 @@ h1 {
    display: inline-block;
    text-align: center;
    margin: 0 8px;
+   border-color: black;
+   border-width: 3px;
+   border-style: dashed;
 
  }
 
